Update 19.09.2021 - header-done adaptive header-done. Main block - almost complete Main block adaptive - none

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -11,6 +11,8 @@
   "fileTree": {
     "expandedDirs": [
       "#source",
+      "#source/scss",
+      "css",
       "#source/js"
     ],
     "hideSystemFiles": true,
@@ -25,7 +27,21 @@
     ],
     "hideUnwatchedFiles": false
   },
-  "imports": [],
+  "imports": [
+    {
+      "path": "#source/scss/style.scss",
+      "imports": [
+        "#source/scss/default.scss",
+        "#source/scss/reset.scss"
+      ]
+    },
+    {
+      "path": "#source/js/main.js",
+      "imports": [
+        "#source/js/burger.js"
+      ]
+    }
+  ],
   "projectView": {
     "selectedView": "file-tree"
   },
