--- a/prepros-6.config
+++ b/prepros-6.config
@@ -6,6 +6,10 @@
     {
       "path": "#source/js/main.js",
       "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"\"}"
+    },
+    {
+      "path": "#source/js/accardeon.js",
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":false,\"mangle\":true},\"outputSuffix\":\"\"}"
     }
   ],
   "fileTree": {
@@ -13,7 +17,8 @@
       "#source",
       "#source/scss",
       "css",
-      "#source/js"
+      "#source/js",
+      "js"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
